# MNIST-BE-TRAIN

./: .gitignore  README.md  main.py  pyproject.toml
